[tool.poetry]
name = "flet-form"
version = "0.1.0"
description = "Form controller for Flet to facilitate user input validation"
authors = ["50bytes.dev <50bytes.dev@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "flet_form", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
flet = "^0.21.2"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
